--- a/src/translations/br/common.json
+++ b/src/translations/br/common.json
@@ -5,8 +5,17 @@
     "date": {
         "months": {
             "january": "Janeiro",
+            "february": "Fevereiro",
+            "march": "Março",
+            "april": "Abril",
+            "may": "Maio",
             "june": "Junho",
-            "july": "Julho"
+            "july": "Julho",
+            "august": "Agosto",
+            "september": "Setembro",
+            "october": "Outubro",
+            "november": "Novembro",
+            "december": "Dezembro"
         }
     },
     "profile": {
